--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Mon Jun 15 23:24:10 2015 -->
+     on Emacs 24.3.1, Tue Jun 16 00:08:25 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -114,10 +114,14 @@ that can be shown on-line with Acrobat Reader.
 <h4 id="id1">Wiki</h4>
 <p>After the manual, your second source of useful information, example
 files, or answers to frequently asked questions is the <a data-role="button"
-    data-inline="true" data-mini="true" href="http://ipe-wiki.otfried.org">Ipe 7
+    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
     Wiki</a>. The idea
 is that Ipe users add useful tips and tricks, or anything related to
 Ipe here.
+<p>We are currently in the process of migrating the Wiki from its old
+location on
+<a href="https://sourceforge.net/p/ipe7/wiki/Home/">sourceforge</a>. In the
+mean-time, both Wikis are read-only.
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
@@ -153,11 +157,11 @@ as well as a timer on your own display.
 <h4 id="id5">Reporting bugs</h4>
 <p>To report bugs, please use the <a data-role="button"
     data-inline="true" data-mini="true" href="bugzilla.html">Ipe bug tracker</a>
-(click on <span class="tex-emph">Create ticket</span>).
+(click on <span class="tex-emph">New issue</span>).
 <p>Before reporting a bug, please verify that you have the latest Ipe
 version, and check that the problem is not explained in the
 <span class="tex-emph">frequently asked questions</span> on the <a data-role="button"
-    data-inline="true" data-mini="true" href="http://ipe-wiki.otfried.org">Ipe 7
+    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
     Wiki</a>.  Please do not send
 bug reports directly to me (the first thing I would do with your
 report is to enter it into the bug tracker).
@@ -191,13 +195,13 @@ See the <a data-role="button"
 <p>The current version of Ipe is <span class="tex-bf">Ipe 7.1.7</span>.
 <p>A binary package for your system may have been made available by
 others, see the <a data-role="button"
-    data-inline="true" data-mini="true" href="http://ipe-wiki.otfried.org">Ipe 7
+    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
     Wiki</a>.
 <p>I'm making three downloads of Ipe available on
 <a data-role="button"
-    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe">GitHub</a>: a binary distribution for Windows,
-a binary package for Mac OS X, and a source package that should
-compile on any recent Unix system.
+    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe/releases">GitHub</a>: a binary distribution for
+Windows, a binary package for Mac OS X, and a source package that
+should compile on any recent Unix system.
 <dl class="tex-description"><dt><span class="tex-bf">The source distribution</span></dt><dd> It includes sources to build Ipe, as
   well as the Ipe documentation.  See the <span class="tex-emph">install.txt</span> file for
   instructions.  You may also need the URW Postscript fonts in
@@ -208,8 +212,6 @@ compile on any recent Unix system.
   does not work on Windows Vista.
 <dt><span class="tex-bf">Mac package</span></dt><dd> Download and install this package on Mac&nbsp;OS&nbsp;X.  Ipe
   bundles for Mac OS&nbsp;X are compiled by Nathaniel Cunningham.
-<dt><span class="tex-bf">Historical version</span></dt><dd>
-  Ipe 6.0pre32patch1 (April 2009) is the last version of Ipe&nbsp;6.
 </dl>
 <p>Several separate programs are available from the
 <a data-role="button"
