--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Tue Jun 16 00:08:25 2015 -->
+     on Emacs 24.3.1, Tue Jun 16 11:33:17 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -199,7 +199,7 @@ others, see the <a data-role="button"
     Wiki</a>.
 <p>I'm making three downloads of Ipe available on
 <a data-role="button"
-    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe/releases">GitHub</a>: a binary distribution for
+    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe">GitHub</a>: a binary distribution for
 Windows, a binary package for Mac OS X, and a source package that
 should compile on any recent Unix system.
 <dl class="tex-description"><dt><span class="tex-bf">The source distribution</span></dt><dd> It includes sources to build Ipe, as
