--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Mon Jun 22 14:42:44 2015 -->
+     on Emacs 24.3.1, Sat Jul 11 21:03:02 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -188,7 +188,7 @@ See the <a data-role="button"
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
 <h4 id="id7">Downloads</h4>
-<p>The current version of Ipe is <span class="tex-bf">Ipe 7.1.7</span>.
+<p>The current version of Ipe is <span class="tex-bf">Ipe 7.1.8</span>.
 <p>A binary package for your system may have been made available by
 others, see the <a data-role="button"
     data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
@@ -205,7 +205,10 @@ should compile on any recent Unix system.
 <dt><span class="tex-bf">Windows binary version</span></dt><dd> Unzip this package somewhere on your
   (Windows) computer, but choose a location whose path contains no
   non-ASCII characters.  This package requires at least Windows&nbsp;7, it
-  does not work on Windows Vista.
+  does not work on Windows Vista or earlier.  For some releases a
+  package marked <span class="tex-bf">winxp</span> is available, this should work on
+  Windows&nbsp;XP and Vista, but does not support zoom and pan gestures on
+  the canvas.
 <dt><span class="tex-bf">Mac package</span></dt><dd> Download and install this package on Mac&nbsp;OS&nbsp;X.  Ipe
   bundles for Mac OS&nbsp;X are compiled by Nathaniel Cunningham.
 </dl>
