--- a/manual/group__canvas.html
+++ b/manual/group__canvas.html
@@ -61,7 +61,8 @@ Classes</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <p>A widget (control) that displays an Ipe document page. </p>
 <p>This module contains the classes needed to display and edit Ipe objects using the selected toolkit.</p>
-<p>These classes are not in Ipelib, but in a separate library libipecanvas. </p>
+<p>These classes are not in Ipelib, but in a separate library libipecanvas.</p>
+<p>On a Mac OS Retina display, the pixel coordinates used by Ipe refer to the actual device pixels. </p>
 </div><!-- contents -->
 <hr>
 </body></html>
