--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Thu Aug  6 14:51:57 2015 -->
+     on Emacs 24.3.1, Thu Aug  6 15:00:19 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -127,7 +127,8 @@ others, see the <a data-role="button"
     data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-src.tar.gz">ipe-7.1.8-src.tar</a>
 <p>This includes sources to build Ipe, as well as the Ipe documentation.
 See the <span class="tex-emph">install.txt</span> file for instructions.  You may also need
-the URW Postscript fonts in <a href="">ipe-urw-fonts.tgz</a>.
+the URW Postscript fonts in <a href="https://github.com/otfried/ipe/raw/master/releases/ipe-urw-fonts.tar.gz">ipe-urw-fonts.tgz</a>.
+<p><hr />
 
 <h5 id="id3">Windows binary version</h5>
 <p><a data-role="button"
@@ -136,16 +137,23 @@ the URW Postscript fonts in <a href="">ipe-urw-fonts.tgz</a>.
 location whose path contains no non-ASCII characters.  This package
 requires at least Windows&nbsp;7, it does not work on Windows Vista or
 earlier.  
+<p>If you need the Voronoi Diagram ipelet on Windows in Ipe 7.1.8, unzip
+the file
+<a href="http://github.com/otfried/ipe/raw/master/releases/7.1/patch-7.1.8-win.zip">patch-7.1.8-win.zip</a>
+at the same place where you unpacked Ipe. It replaces qvoronoi.dll
+with a working version.
 <p>On Windows&nbsp;XP and Vista you can use
 <a data-role="button"
     data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-winxp.zip">ipe-7.1.8-winxp.zip</a>,
 but this does not support zoom and pan gestures on the canvas.
+<p><hr />
 
 <h5 id="id4">Mac package</h5>
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.7-mac.dmg">ipe-7.1.7-mac.dmg</a>
-<p>Download and install this package on Mac&nbsp;OS&nbsp;X.  Ipe bundles for Mac
-OS&nbsp;X are compiled by Nathaniel Cunningham.
+<p>Download and install this package on Mac&nbsp;OS&nbsp;10.8 or higher (it may
+work on&nbsp;10.6 and&nbsp;10.7).  Ipe bundles for Mac OS&nbsp;X are compiled by
+Nathaniel Cunningham.
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
