--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Thu Aug  6 15:00:19 2015 -->
+     on Emacs 24.3.1, Thu Aug  6 15:12:23 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -113,30 +113,31 @@ that can be shown on-line with Acrobat Reader.
   data-role="collapsible" data-content-theme="e" data-theme="e">
 <h4 id="id1">Download the current Ipe version</h4>
 <p>The current version of Ipe is <span class="tex-bf">Ipe 7.1.8</span>.
-<p>I'm making three downloads of Ipe available on
-: a binary distribution for
+<p>I'm making three downloads of Ipe available: a binary distribution for
 Windows, a binary package for Mac OS X, and a source package that
 should compile on any recent Unix system.
 <p>A binary package for your system may have been made available by
 others, see the <a data-role="button"
     data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
     Wiki</a>.
-
-<h5 id="id2">The source distribution</h5>
+<p><div
+  data-role="collapsible" data-content-theme="e" data-theme="e">
+<h5 id="id2">May the source be with you</h5>
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-src.tar.gz">ipe-7.1.8-src.tar</a>
 <p>This includes sources to build Ipe, as well as the Ipe documentation.
 See the <span class="tex-emph">install.txt</span> file for instructions.  You may also need
 the URW Postscript fonts in <a href="https://github.com/otfried/ipe/raw/master/releases/ipe-urw-fonts.tar.gz">ipe-urw-fonts.tgz</a>.
-<p><hr />
-
-<h5 id="id3">Windows binary version</h5>
+</div>
+<p><div
+  data-role="collapsible" data-content-theme="e" data-theme="e">
+<h5 id="id3">Windows binary package</h5>
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-win.zip">ipe-7.1.8-win.zip</a>
-<p>Unzip this package somewhere on your (Windows) computer, but choose a
+<p>Unzip this package somewhere on your Windows computer, but choose a
 location whose path contains no non-ASCII characters.  This package
 requires at least Windows&nbsp;7, it does not work on Windows Vista or
-earlier.  
+earlier.
 <p>If you need the Voronoi Diagram ipelet on Windows in Ipe 7.1.8, unzip
 the file
 <a href="http://github.com/otfried/ipe/raw/master/releases/7.1/patch-7.1.8-win.zip">patch-7.1.8-win.zip</a>
@@ -146,14 +147,16 @@ with a working version.
 <a data-role="button"
     data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-winxp.zip">ipe-7.1.8-winxp.zip</a>,
 but this does not support zoom and pan gestures on the canvas.
-<p><hr />
-
-<h5 id="id4">Mac package</h5>
+</div>
+<p><div
+  data-role="collapsible" data-content-theme="e" data-theme="e">
+<h5 id="id4">Mac OS X binary package</h5>
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.7-mac.dmg">ipe-7.1.7-mac.dmg</a>
 <p>Download and install this package on Mac&nbsp;OS&nbsp;10.8 or higher (it may
 work on&nbsp;10.6 and&nbsp;10.7).  Ipe bundles for Mac OS&nbsp;X are compiled by
 Nathaniel Cunningham.
+</div>
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
@@ -197,9 +200,6 @@ as well as a timer on your own display.
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
 <h4 id="id9">Reporting bugs</h4>
-<p>To report bugs, please use the <a data-role="button"
-    data-inline="true" data-mini="true" href="bugzilla.html">Ipe bug tracker</a>
-(click on <span class="tex-emph">New issue</span>).
 <p>Before reporting a bug, please verify that you have the latest Ipe
 version, and check that the problem is not explained in the
 <span class="tex-emph">frequently asked questions</span> on the <a data-role="button"
@@ -207,6 +207,9 @@ version, and check that the problem is not explained in the
     Wiki</a>.  Please do not send
 bug reports directly to me (the first thing I would do with your
 report is to enter it into the bug tracker).
+<p>To report bugs, please use the <a data-role="button"
+    data-inline="true" data-mini="true" href="bugzilla.html">Ipe bug tracker</a>
+(click on <span class="tex-emph">New issue</span>).
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
