--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Sat Jul 11 21:03:02 2015 -->
+     on Emacs 24.3.1, Mon Aug 17 11:46:43 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -111,7 +111,56 @@ that can be shown on-line with Acrobat Reader.
   version</a>).
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id1">Wiki</h4>
+<h4 id="id1">Download the current Ipe version</h4>
+<p>The current version of Ipe is <span class="tex-bf">Ipe 7.1.8</span>.
+<p>I'm making three downloads of Ipe available: a binary distribution for
+Windows, a binary package for Mac OS X, and a source package that
+should compile on any recent Unix system.
+<p>A binary package for your system may have been made available by
+others, see the <a data-role="button"
+    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
+    Wiki</a>.
+<p><div
+  data-role="collapsible" data-content-theme="e" data-theme="e">
+<h5 id="id2">May the source be with you</h5>
+<p><a data-role="button"
+    data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-src.tar.gz">ipe-7.1.8-src.tar</a>
+<p>This includes sources to build Ipe, as well as the Ipe documentation.
+See the <span class="tex-emph">install.txt</span> file for instructions.  You may also need
+the URW Postscript fonts in <a href="https://github.com/otfried/ipe/raw/master/releases/ipe-urw-fonts.tar.gz">ipe-urw-fonts.tgz</a>.
+</div>
+<p><div
+  data-role="collapsible" data-content-theme="e" data-theme="e">
+<h5 id="id3">Windows binary package</h5>
+<p><a data-role="button"
+    data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-win.zip">ipe-7.1.8-win.zip</a>
+<p>Unzip this package somewhere on your Windows computer, but choose a
+location whose path contains no non-ASCII characters.  This package
+requires at least Windows&nbsp;7, it does not work on Windows Vista or
+earlier.
+<p>If you need the Voronoi Diagram ipelet on Windows in Ipe 7.1.8, unzip
+the file
+<a href="http://github.com/otfried/ipe/raw/master/releases/7.1/patch-7.1.8-win.zip">patch-7.1.8-win.zip</a>
+at the same place where you unpacked Ipe. It replaces qvoronoi.dll
+with a working version.
+<p>On Windows&nbsp;XP and Vista you can use
+<a data-role="button"
+    data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-winxp.zip">ipe-7.1.8-winxp.zip</a>,
+but this does not support zoom and pan gestures on the canvas.
+</div>
+<p><div
+  data-role="collapsible" data-content-theme="e" data-theme="e">
+<h5 id="id4">Mac OS X binary package</h5>
+<p><a data-role="button"
+    data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-mac.dmg">ipe-7.1.8-mac.dmg</a>
+<p>Download and install this package on Mac&nbsp;OS&nbsp;10.8 or higher (it may
+work on&nbsp;10.6 and&nbsp;10.7).  Ipe bundles for Mac OS&nbsp;X are compiled by
+Nathaniel Cunningham.
+</div>
+</div>
+<p><div
+  data-role="collapsible" data-content-theme="e" data-theme="e">
+<h4 id="id5">Wiki</h4>
 <p>After the manual, your second source of useful information, example
 files, or answers to frequently asked questions is the <a data-role="button"
     data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
@@ -121,7 +170,7 @@ Ipe here.
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id2">Mailing lists</h4>
+<h4 id="id6">Mailing lists</h4>
 <p>There are two mailing lists for Ipe. The first mailing list is used
 solely to announce new versions of Ipe, and perhaps new ipelets that
 may be interesting to a broad audience.  Traffic on this list is very
@@ -129,7 +178,7 @@ light, as most messages on this list come from me. You can subscribe
 to the announcement list
 <a data-role="button"
     data-inline="true" data-mini="true" href="http://lists.science.uu.nl/mailman/listinfo/ipe-announce">here</a>.
-<p><span id="id3">
+<p><span id="id7">
 The</span> second list is used to discuss Ipe.  You can subscribe
 <a data-role="button"
     data-inline="true" data-mini="true" href="http://lists.science.uu.nl/mailman/listinfo/ipe-discuss">here</a>.
@@ -139,7 +188,7 @@ that.
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id4">IpePresenter</h4>
+<h4 id="id8">IpePresenter</h4>
 <p>If you use Ipe for making presentations, you may want to have a look
 at <a data-role="button"
     data-inline="true" data-mini="true" href="http://hg.mrzv.org/IpePresenter">IpePresenter</a>, written by
@@ -150,10 +199,7 @@ as well as a timer on your own display.
 <p></div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id5">Reporting bugs</h4>
-<p>To report bugs, please use the <a data-role="button"
-    data-inline="true" data-mini="true" href="bugzilla.html">Ipe bug tracker</a>
-(click on <span class="tex-emph">New issue</span>).
+<h4 id="id9">Reporting bugs</h4>
 <p>Before reporting a bug, please verify that you have the latest Ipe
 version, and check that the problem is not explained in the
 <span class="tex-emph">frequently asked questions</span> on the <a data-role="button"
@@ -161,10 +207,13 @@ version, and check that the problem is not explained in the
     Wiki</a>.  Please do not send
 bug reports directly to me (the first thing I would do with your
 report is to enter it into the bug tracker).
+<p>To report bugs, please use the <a data-role="button"
+    data-inline="true" data-mini="true" href="bugzilla.html">Ipe bug tracker</a>
+(click on <span class="tex-emph">New issue</span>).
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id6">Copyright</h4>
+<h4 id="id10">Copyright</h4>
 <p>The extensible drawing editor Ipe is "free," this means that
 everyone is free to use it and free to redistribute it on certain
 conditions. Ipe is not in the public domain; it is copyrighted
@@ -187,55 +236,35 @@ See the <a data-role="button"
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id7">Downloads</h4>
-<p>The current version of Ipe is <span class="tex-bf">Ipe 7.1.8</span>.
-<p>A binary package for your system may have been made available by
-others, see the <a data-role="button"
-    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
-    Wiki</a>.
-<p>I'm making three downloads of Ipe available on
-<a data-role="button"
-    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe">GitHub</a>: a binary distribution for
-Windows, a binary package for Mac OS X, and a source package that
-should compile on any recent Unix system.
-<dl class="tex-description"><dt><span class="tex-bf">The source distribution</span></dt><dd> It includes sources to build Ipe, as
-  well as the Ipe documentation.  See the <span class="tex-emph">install.txt</span> file for
-  instructions.  You may also need the URW Postscript fonts in
-  <span class="tex-emph">ipe-urw-fonts.tgz</span>.
-<dt><span class="tex-bf">Windows binary version</span></dt><dd> Unzip this package somewhere on your
-  (Windows) computer, but choose a location whose path contains no
-  non-ASCII characters.  This package requires at least Windows&nbsp;7, it
-  does not work on Windows Vista or earlier.  For some releases a
-  package marked <span class="tex-bf">winxp</span> is available, this should work on
-  Windows&nbsp;XP and Vista, but does not support zoom and pan gestures on
-  the canvas.
-<dt><span class="tex-bf">Mac package</span></dt><dd> Download and install this package on Mac&nbsp;OS&nbsp;X.  Ipe
-  bundles for Mac OS&nbsp;X are compiled by Nathaniel Cunningham.
-</dl>
-<p>Several separate programs are available from the
+<h4 id="id11">Other downloads</h4>
+<p>Older Ipe versions can be found in the <a data-role="button"
+    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe">ipe</a>
+repository on GitHub.
+<p>Several <span class="tex-emph">separate</span> programs are available from the
 <a data-role="button"
     data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-tools">ipe-tools</a> repository on GitHub.
-These are available in source form only (A binary for pdftoipe is
+These are <span class="tex-emph">available in source form</span> only (A binary for pdftoipe is
 included in the Ipe Windows binary distribution).
-<dl class="tex-description"><dt><span class="tex-bf">The svgtoipe program</span></dt><dd> <span class="tex-emph">svgtoipe</span> converts SVG figures to
-  Ipe format.  It cannot handle everything in SVG, but should work for
-  geometric objects and gradients.  This program is actually a Python
-  script.
-<dt><span class="tex-bf">The pdftoipe program</span></dt><dd>
-  <span class="tex-emph">pdftoipe</span> converts arbitrary PDF files to Ipe's XML format, or
-  at least it tries to.  You'll need the poppler library to compile
-  it.
-<dt><span class="tex-bf">The figtoipe program</span></dt><dd>
-  <span class="tex-emph">figtoipe</span> converts figures made with Xfig to Ipe's XML
-  format.  It does not handle all the features of Xfig.
-  <span class="tex-emph">figtoipe</span> was improved and is currently maintained by
-  Alexander B&uuml;rger. Thank you! 
-<dt><span class="tex-bf">The ipe5toxml program</span></dt><dd> If you still have figures that were made
-  with Ipe&nbsp;5, you can use this program to convert them to the format
-  understood by Ipe&nbsp;6. You can then run <span class="tex-emph">ipe6upgrade</span> to convert
-  them to Ipe&nbsp;7 format.  The source to ipe5toxml is in the public
-  domain.
-</dl>  
+
+<h5 id="id12">Svgtoipe</h5>
+<p><span class="tex-emph">svgtoipe</span> converts SVG figures to Ipe format.  It cannot handle
+everything in SVG, but should work for geometric objects and
+gradients.  This program is actually a Python script.
+
+<h5 id="id13">Pdftoipe</h5>
+<p><span class="tex-emph">pdftoipe</span> converts arbitrary PDF files to Ipe's XML format, or
+at least it tries to.  You'll need the poppler library to compile it.
+
+<h5 id="id14">Figtoipe</h5>
+<p><span class="tex-emph">figtoipe</span> converts figures made with Xfig to Ipe's XML format.
+It does not handle all the features of Xfig.  <span class="tex-emph">figtoipe</span> was
+improved and is currently maintained by Alexander B&uuml;rger. Thank you!
+
+<h5 id="id15">ipe5toxml</h5>
+<p>If you still have figures that were made with Ipe&nbsp;5, you can use this
+program to convert them to the format understood by Ipe&nbsp;6. You can
+then run <span class="tex-emph">ipe6upgrade</span> to convert them to Ipe&nbsp;7 format.  The
+source to ipe5toxml is in the public domain.
 </div>
 </div>
 </div></body></html>
