--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Mon Aug 17 11:46:43 2015 -->
+     on Emacs 24.3.1, Mon Aug 17 11:50:51 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -266,5 +266,5 @@ program to convert them to the format understood by Ipe&nbsp;6. You can
 then run <span class="tex-emph">ipe6upgrade</span> to convert them to Ipe&nbsp;7 format.  The
 source to ipe5toxml is in the public domain.
 </div>
-<p></div>
+</div>
 </div></body></html>
