--- a/bugzilla.html
+++ b/bugzilla.html
@@ -2,14 +2,14 @@
 <head>
    <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
    <meta http-equiv="refresh"
-	 content="1;url=https://github.com/otfried/ipe-issues/issues">
+	 content="1;url=https://github.com/otfried/ipe/issues">
    <title>Bug Tracker for Ipe</title>
 </head>
 <body bgcolor="#FFFFFF">
 <p>
 Please wait a second while you are being redirected. If this does not
 work, please <a
-href="https://github.com/otfried/ipe-issues/issues">click
+href="https://github.com/otfried/ipe/issues">click
 here</a>.
 </body>
 </html>
