--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Sat Oct 24 22:40:08 2015 -->
+     on Emacs 24.3.1, Sat Oct 24 22:46:21 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -136,17 +136,8 @@ the URW Postscript fonts in <a href="https://github.com/otfried/ipe/raw/master/r
     data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.9-win.zip">ipe-7.1.9-win.zip</a>
 <p>Unzip this package somewhere on your Windows computer, but choose a
 location whose path contains no non-ASCII characters.  This package
-requires at least Windows&nbsp;7, it does not work on Windows Vista or
-earlier.
-<p>If you need the Voronoi Diagram ipelet on Windows in Ipe 7.1.8, unzip
-the file
-<a href="http://github.com/otfried/ipe/raw/master/releases/7.1/patch-7.1.8-win.zip">patch-7.1.8-win.zip</a>
-at the same place where you unpacked Ipe. It replaces qvoronoi.dll
-with a working version.
-<p>On Windows&nbsp;XP and Vista you can use
-<a data-role="button"
-    data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.9-winxp.zip">ipe-7.1.9-winxp.zip</a>,
-but this does not support zoom and pan gestures on the canvas.
+requires at least Windows&nbsp;XP (zoom and pan gestures on the canvas need
+at least Windows&nbsp;7).
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
