--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Sat Oct 24 22:46:21 2015 -->
+     on Emacs 24.3.1, Thu Oct 29 12:13:16 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -124,7 +124,7 @@ others, see the <a data-role="button"
   data-role="collapsible" data-content-theme="e" data-theme="e">
 <h5 id="id2">May the source be with you</h5>
 <p><a data-role="button"
-    data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.9-src.tar.gz">ipe-7.1.9-src.tar</a>
+    data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.1/ipe-7.1.9-src.tar.gz">ipe-7.1.9-src.tar</a>
 <p>This includes sources to build Ipe, as well as the Ipe documentation.
 See the <span class="tex-emph">install.txt</span> file for instructions.  You may also need
 the URW Postscript fonts in <a href="https://github.com/otfried/ipe/raw/master/releases/ipe-urw-fonts.tar.gz">ipe-urw-fonts.tgz</a>.
@@ -133,7 +133,7 @@ the URW Postscript fonts in <a href="https://github.com/otfried/ipe/raw/master/r
   data-role="collapsible" data-content-theme="e" data-theme="e">
 <h5 id="id3">Windows binary package</h5>
 <p><a data-role="button"
-    data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.9-win.zip">ipe-7.1.9-win.zip</a>
+    data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.1/ipe-7.1.9-win.zip">ipe-7.1.9-win.zip</a>
 <p>Unzip this package somewhere on your Windows computer, but choose a
 location whose path contains no non-ASCII characters.  This package
 requires at least Windows&nbsp;XP (zoom and pan gestures on the canvas need
