--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Sun Nov  1 15:21:21 2015 -->
+     on Emacs 24.3.1, Sat Nov  7 09:36:01 2015 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -110,7 +110,8 @@ that can be shown on-line with Acrobat Reader.
     data-inline="true" data-mini="true" href="http://ipe.otfried.org/manual/manual.html">manual</a> (<a href="http://ipe.otfried.org/manual/manual.pdf">PDF
   version</a>).
 <p><div
-  data-role="collapsible" data-content-theme="e" data-theme="e">
+  data-role="collapsible" data-content-theme="e" data-theme="a">
+
 <h4 id="id1">Download the current Ipe version</h4>
 <p>The current version of Ipe is <span class="tex-bf">Ipe 7.1.9</span>.
 <p>I'm making three downloads of Ipe available: a binary distribution for
@@ -121,7 +122,8 @@ others, see the <a data-role="button"
     data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
     Wiki</a>.
 <p><div
-  data-role="collapsible" data-content-theme="e" data-theme="e">
+  data-role="collapsible" data-content-theme="b" data-theme="a">
+
 <h5 id="id2">May the source be with you</h5>
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.1/ipe-7.1.9-src.tar.gz">ipe-7.1.9-src.tar</a>
@@ -131,7 +133,8 @@ the URW Postscript fonts in
 <a href="https://dl.bintray.com/otfried/generic/ipe/ipe-urw-fonts.tar.gz">ipe-urw-fonts.tgz</a>.
 </div>
 <p><div
-  data-role="collapsible" data-content-theme="e" data-theme="e">
+  data-role="collapsible" data-content-theme="c" data-theme="a">
+
 <h5 id="id3">Windows binary package</h5>
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.1/ipe-7.1.9-win.zip">ipe-7.1.9-win.zip</a>
@@ -140,7 +143,8 @@ requires at least Windows&nbsp;XP (zoom and pan gestures on the canvas need
 at least Windows&nbsp;7).
 </div>
 <p><div
-  data-role="collapsible" data-content-theme="e" data-theme="e">
+  data-role="collapsible" data-content-theme="c" data-theme="a">
+
 <h5 id="id4">Mac OS X binary package</h5>
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="http://github.com/otfried/ipe/raw/master/releases/7.1/ipe-7.1.8-mac.dmg">ipe-7.1.8-mac.dmg</a>
@@ -228,9 +232,6 @@ See the <a data-role="button"
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
 <h4 id="id11">Other downloads</h4>
-<p>Older Ipe versions can be found in the <a data-role="button"
-    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe">ipe</a>
-repository on GitHub.
 <p>Several <span class="tex-emph">separate</span> programs are available from the
 <a data-role="button"
     data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-tools">ipe-tools</a> repository on GitHub.
@@ -246,12 +247,16 @@ gradients.  This program is actually a Python script.
 <p><span class="tex-emph">pdftoipe</span> converts arbitrary PDF files to Ipe's XML format, or
 at least it tries to.  You'll need the poppler library to compile it.
 
-<h5 id="id14">Figtoipe</h5>
+<h5 id="id14">Matplotlib backend</h5>
+<p>Matplotlib is a Python module for scientific plotting.  With this
+backend, you can create Ipe figures directly from matplotlib.
+
+<h5 id="id15">Figtoipe</h5>
 <p><span class="tex-emph">figtoipe</span> converts figures made with Xfig to Ipe's XML format.
 It does not handle all the features of Xfig.  <span class="tex-emph">figtoipe</span> was
 improved and is currently maintained by Alexander B&uuml;rger. Thank you!
 
-<h5 id="id15">ipe5toxml</h5>
+<h5 id="id16">ipe5toxml</h5>
 <p>If you still have figures that were made with Ipe&nbsp;5, you can use this
 program to convert them to the format understood by Ipe&nbsp;6. You can
 then run <span class="tex-emph">ipe6upgrade</span> to convert them to Ipe&nbsp;7 format.  The
