--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Fri Jan  1 15:34:16 2016 -->
+     on Emacs 24.3.1, Fri Jan  1 15:53:03 2016 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -128,9 +128,7 @@ others, see the <a data-role="button"
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.1/ipe-7.2.1-src.tar.gz">ipe-7.2.1-src.tar</a>
 <p>This includes sources to build Ipe, as well as the Ipe documentation.
-See the <span class="tex-emph">install.txt</span> file for instructions.  You may also need
-the URW Postscript fonts in
-<a href="https://dl.bintray.com/otfried/generic/ipe/ipe-urw-fonts.tar.gz">ipe-urw-fonts.tgz</a>.
+See the <span class="tex-emph">install.txt</span> file for instructions.  
 </div>
 <p><div
   data-role="collapsible" data-content-theme="c" data-theme="a">
@@ -149,7 +147,7 @@ at least Windows&nbsp;7).
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.1/ipe-7.2.1-mac.dmg">ipe-7.2.1-mac.dmg</a>
 <p>Download this disk image and copy "Ipe.app" onto your Mac running
-Mac&nbsp;OS&nbsp;10.6 or higher.
+Mac&nbsp;OS&nbsp;10.7 or higher.
 </div>
 </div>
 <p><div
@@ -180,20 +178,9 @@ Please don't use it to report bugs&mdash;the bug tracker is much better at
 that.
 <p>Both lists are maintained by Ren&eacute; van Oostrum. Thank you!
 </div>
-<p><div
+<p><p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id8">IpePresenter</h4>
-<p>If you use Ipe for making presentations, you may want to have a look
-at <a data-role="button"
-    data-inline="true" data-mini="true" href="http://hg.mrzv.org/IpePresenter">IpePresenter</a>, written by
-Dmitriy Morozov.   IpePresenter shows the current slide in one window
-(which you can make full screen on the external display), while
-showing the current slide, the next slide, notes for the current page,
-as well as a timer on your own display.
-<p></div>
-<p><div
-  data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id9">Reporting bugs</h4>
+<h4 id="id8">Reporting bugs</h4>
 <p>Before reporting a bug, please verify that you have the latest Ipe
 version, and check that the problem is not explained in the
 <span class="tex-emph">frequently asked questions</span> on the <a data-role="button"
@@ -207,12 +194,12 @@ report is to enter it into the bug tracker).
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id10">Copyright</h4>
+<h4 id="id9">Copyright</h4>
 <p>The extensible drawing editor Ipe is "free," this means that
 everyone is free to use it and free to redistribute it on certain
 conditions. Ipe is not in the public domain; it is copyrighted
 and there are restrictions on its distribution as follows:
-<p>Copyright &#169; 1993&ndash;2015 Otfried Cheong
+<p>Copyright &#169; 1993&ndash;2016 Otfried Cheong
 <p>This program is free software; you can redistribute it and/or modify
 it under the terms of the <span class="tex-sc">Gnu</span> General Public License as
 published by the Free Software Foundation; either version&nbsp;3 of the
@@ -230,7 +217,7 @@ See the <a data-role="button"
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id11">Other downloads</h4>
+<h4 id="id10">Other downloads</h4>
 <p>Older Ipe versions can be found on
 <a data-role="button"
     data-inline="true" data-mini="true" href="https://bintray.com/otfried/generic/ipe">bintray.com</a>.
@@ -240,25 +227,25 @@ See the <a data-role="button"
 These are <span class="tex-emph">available in source form</span> only (A binary for pdftoipe is
 included in the Ipe Windows binary distribution).
 
-<h5 id="id12">Svgtoipe</h5>
+<h5 id="id11">Svgtoipe</h5>
 <p><span class="tex-emph">svgtoipe</span> converts SVG figures to Ipe format.  It cannot handle
 everything in SVG, but should work for geometric objects and
 gradients.  This program is actually a Python script.
 
-<h5 id="id13">Pdftoipe</h5>
+<h5 id="id12">Pdftoipe</h5>
 <p><span class="tex-emph">pdftoipe</span> converts arbitrary PDF files to Ipe's XML format, or
 at least it tries to.  You'll need the poppler library to compile it.
 
-<h5 id="id14">Matplotlib backend</h5>
+<h5 id="id13">Matplotlib backend</h5>
 <p>Matplotlib is a Python module for scientific plotting.  With this
 backend, you can create Ipe figures directly from matplotlib.
 
-<h5 id="id15">Figtoipe</h5>
+<h5 id="id14">Figtoipe</h5>
 <p><span class="tex-emph">figtoipe</span> converts figures made with Xfig to Ipe's XML format.
 It does not handle all the features of Xfig.  <span class="tex-emph">figtoipe</span> was
 improved and is currently maintained by Alexander B&uuml;rger. Thank you!
 
-<h5 id="id16">ipe5toxml</h5>
+<h5 id="id15">ipe5toxml</h5>
 <p>If you still have figures that were made with Ipe&nbsp;5, you can use this
 program to convert them to the format understood by Ipe&nbsp;6. You can
 then run <span class="tex-emph">ipe6upgrade</span> to convert them to Ipe&nbsp;7 format.  The
