added link to old mac version for people using osx 10.8

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.3.1, Sun Jan 24 12:25:08 2016 -->
+     on Emacs 24.3.1, Thu Apr  7 10:14:53 2016 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -147,7 +147,10 @@ at least Windows&nbsp;7).
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.2/ipe-7.2.2-mac.dmg">ipe-7.2.2-mac.dmg</a>
 <p>Download this disk image and copy "Ipe.app" onto your Mac running
-Mac&nbsp;OS&nbsp;10.8 or higher.
+OSX&nbsp;10.9 or higher.
+<p>If you are still using OSX&nbsp;10.6 to&nbsp;10.8, you can use Ipe&nbsp;7.1.10 from
+here:
+<a href="https://dl.bintray.com/otfried/generic/ipe/7.1/ipe-7.1.10-mac.dmg">ipe-7.1.10-mac.dmg</a>
 </div>
 </div>
 <p><div
