Added appimage to webpage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.5.1, Mon Sep 19 21:15:02 2016 -->
+     on Emacs 24.5.1, Thu Sep 22 17:54:14 2016 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -101,7 +101,7 @@ that can be shown on-line with Acrobat Reader.
 <li>The text model is based on Unicode, and has been tested with
   Korean, Chinese, and Japanese.
 <li>Ipe can be compiled for Unix and Windows.
-<li>Ipe is written in standard C++ and Lua 5.2.
+<li>Ipe is written in standard C++ and Lua 5.3..
 </ul>
 <p>You can like Ipe on
 <a data-role="button"
@@ -113,21 +113,32 @@ that can be shown on-line with Acrobat Reader.
 
 <h4 id="id1">Download the current Ipe version</h4>
 <p>The current version of Ipe is <span class="tex-bf">Ipe 7.2.6</span>.
-<p>I'm making three downloads of Ipe available: a binary distribution for
-Windows, a binary package for Mac OS X, and a source package that
-should compile on any recent Unix system.
-<p>A binary package for your system may have been made available by
-others, see the <a data-role="button"
-    data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
-    Wiki</a>.
+<p>I'm making four downloads of Ipe available: a binary distribution for
+Windows, a binary package for Mac OS X, a binary AppImage for Linux,
+and a source package that should compile on any recent Unix system.
 <p><div
-  data-role="collapsible" data-content-theme="b" data-theme="a">
+  data-role="collapsible" data-content-theme="c" data-theme="a">
 
-<h5 id="id2">May the source be with you</h5>
+<h5 id="id2">Linux AppImage</h5>
 <p><a data-role="button"
-    data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.2/ipe-7.2.6-src.tar.gz">ipe-7.2.6-src.tar</a>
-<p>This includes sources to build Ipe, as well as the Ipe documentation.
-See the <span class="tex-emph">install.txt</span> file for instructions.  
+    data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.2/ipe-7.2.6-x86_64.AppImage">ipe-7.2.6-x86_64.AppImage</a> 
+<p>An <a href="http://appimage.org">AppImage</a> is a package for Linux that
+requires no compilation, no installation, and works on all Linux
+distributions (assuming it's not too ancient).
+<p>Simply download the file and make it executable (for instance, you can
+say <code>chmod 0755 ipe-x.y.z-x86_64.AppImage</code> on the command line).
+<p>To start Ipe, just click on the AppImage, or execute it from the
+command line like this:
+<pre class="tex-verbatim">
+$ ./ipe-7.2.6-x86_64.AppImage 
+</pre>
+<p>If you want to use the Ipe command line tools, such as ipetoipe,
+iperender, or ipescript, just prefix the command with the AppImage:
+<pre class="tex-verbatim">
+$ ./ipe-7.2.6-x86_64.AppImage ipetoipe -pdf ~/test.ipe
+</pre>
+(Note that you'll have to use absolute paths for the filename
+arguments of all scripts.)
 </div>
 <p><div
   data-role="collapsible" data-content-theme="c" data-theme="a">
@@ -151,10 +162,19 @@ OSX&nbsp;10.9 or higher.
 here:
 <a href="https://dl.bintray.com/otfried/generic/ipe/7.1/ipe-7.1.10-mac.dmg">ipe-7.1.10-mac.dmg</a>
 </div>
+<p><div
+  data-role="collapsible" data-content-theme="b" data-theme="a">
+
+<h5 id="id5">May the source be with you</h5>
+<p><a data-role="button"
+    data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.2/ipe-7.2.6-src.tar.gz">ipe-7.2.6-src.tar</a>
+<p>This includes sources to build Ipe, as well as the Ipe documentation.
+See the <span class="tex-emph">install.txt</span> file for instructions.  
+</div>
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id5">Wiki</h4>
+<h4 id="id6">Wiki</h4>
 <p>After the manual, your second source of useful information, example
 files, or answers to frequently asked questions is the <a data-role="button"
     data-inline="true" data-mini="true" href="https://github.com/otfried/ipe-wiki/wiki">Ipe 7
@@ -164,7 +184,7 @@ Ipe here.
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id6">Mailing lists</h4>
+<h4 id="id7">Mailing lists</h4>
 <p>There are two mailing lists for Ipe. The first mailing list is used
 solely to announce new versions of Ipe, and perhaps new ipelets that
 may be interesting to a broad audience.  Traffic on this list is very
@@ -172,7 +192,7 @@ light, as most messages on this list come from me. You can subscribe
 to the announcement list
 <a data-role="button"
     data-inline="true" data-mini="true" href="http://lists.science.uu.nl/mailman/listinfo/ipe-announce">here</a>.
-<p><span id="id7">
+<p><span id="id8">
 The</span> second list is used to discuss Ipe.  You can subscribe
 <a data-role="button"
     data-inline="true" data-mini="true" href="http://lists.science.uu.nl/mailman/listinfo/ipe-discuss">here</a>.
@@ -182,7 +202,7 @@ that.
 </div>
 <p><p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id8">Reporting bugs</h4>
+<h4 id="id9">Reporting bugs</h4>
 <p>Before reporting a bug, please verify that you have the latest Ipe
 version, and check that the problem is not explained in the
 <span class="tex-emph">frequently asked questions</span> on the <a data-role="button"
@@ -196,7 +216,7 @@ report is to enter it into the bug tracker).
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id9">Copyright</h4>
+<h4 id="id10">Copyright</h4>
 <p>The extensible drawing editor Ipe is "free," this means that
 everyone is free to use it and free to redistribute it on certain
 conditions. Ipe is not in the public domain; it is copyrighted
@@ -219,7 +239,7 @@ See the <a data-role="button"
 </div>
 <p><div
   data-role="collapsible" data-content-theme="e" data-theme="e">
-<h4 id="id10">Other downloads</h4>
+<h4 id="id11">Other downloads</h4>
 <p>Older Ipe versions can be found on
 <a data-role="button"
     data-inline="true" data-mini="true" href="https://bintray.com/otfried/generic/ipe">bintray.com</a>.
@@ -229,25 +249,25 @@ See the <a data-role="button"
 These are <span class="tex-emph">available in source form</span> only (A binary for pdftoipe is
 included in the Ipe Windows binary distribution).
 
-<h5 id="id11">Svgtoipe</h5>
+<h5 id="id12">Svgtoipe</h5>
 <p><span class="tex-emph">svgtoipe</span> converts SVG figures to Ipe format.  It cannot handle
 everything in SVG, but should work for geometric objects and
 gradients.  This program is actually a Python script.
 
-<h5 id="id12">Pdftoipe</h5>
+<h5 id="id13">Pdftoipe</h5>
 <p><span class="tex-emph">pdftoipe</span> converts arbitrary PDF files to Ipe's XML format, or
 at least it tries to.  You'll need the poppler library to compile it.
 
-<h5 id="id13">Matplotlib backend</h5>
+<h5 id="id14">Matplotlib backend</h5>
 <p>Matplotlib is a Python module for scientific plotting.  With this
 backend, you can create Ipe figures directly from matplotlib.
 
-<h5 id="id14">Figtoipe</h5>
+<h5 id="id15">Figtoipe</h5>
 <p><span class="tex-emph">figtoipe</span> converts figures made with Xfig to Ipe's XML format.
 It does not handle all the features of Xfig.  <span class="tex-emph">figtoipe</span> was
 improved and is currently maintained by Alexander B&uuml;rger. Thank you!
 
-<h5 id="id15">ipe5toxml</h5>
+<h5 id="id16">ipe5toxml</h5>
 <p>If you still have figures that were made with Ipe&nbsp;5, you can use this
 program to convert them to the format understood by Ipe&nbsp;6. You can
 then run <span class="tex-emph">ipe6upgrade</span> to convert them to Ipe&nbsp;7 format.  The
