--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!-- XML file produced from file: webpage.tex
      using Hyperlatex v 15.02 (c) Otfried Cheong
-     on Emacs 24.5.1, Thu Sep 22 17:54:14 2016 -->
+     on Emacs 24.5.1, Fri Sep 23 11:44:51 2016 -->
 <head>
 <title>The Ipe extensible drawing editor</title>
 <meta charset="utf-8" /><meta name="viewport" content="width=device-width,
@@ -120,6 +120,13 @@ and a source package that should compile on any recent Unix system.
   data-role="collapsible" data-content-theme="c" data-theme="a">
 
 <h5 id="id2">Linux AppImage</h5>
+<p>Several Linux distributions (including Debian, Ubuntu, Linux Mint,
+Fedora, Arch Linux) offer an ipe package, which you can install
+through the distribution's package manager.
+<p>It takes a while for a new Ipe version to make into a distribution,
+especially the long-term stable distributions.  If you want to use the
+new features of the cutting edge Ipe version, you can either compile
+Ipe yourself, or use this AppImage:
 <p><a data-role="button"
     data-inline="true" data-mini="true" href="https://dl.bintray.com/otfried/generic/ipe/7.2/ipe-7.2.6-x86_64.AppImage">ipe-7.2.6-x86_64.AppImage</a> 
 <p>An <a href="http://appimage.org">AppImage</a> is a package for Linux that
